Changes from Version 1.12 to 1.13 [5-Apr-2017]

- issue with inference resolved, added options compute.sigtest.deriv (derivative based inference) and compute.sigtest.anova (F-based inference)

Changes from Version 1.11 to 1.12 [5-Apr-2017]

- potting added horizontal line for derivatives

Changes from Version 1.10 to 1.11 [4-Apr-2017]

- modifying significance testing, changed defaults

Changes from Version 1.09 to 1.10 [4-Apr-2017]

- extended derivatives to the categorical case, more efficient plotting

Changes from Version 1.08 to 1.09 [3-Apr-2017]

- different bootstrap procedure

Changes from Version 1.07 to 1.08 [2-Apr-2017]

- fixed bootstrap anova for corner cases, various bugs squashed

Changes from Version 1.06 to 1.07 [2-Apr-2017]

- added bootstrap anova, fixed minor glitches

Changes from Version 1.05 to 1.06 [1-Apr-2017]

- no longer relies in routines from crs (I wrote crs and have migrated a subset of necessary functions to this package)

Changes from Version 1.04 to 1.05 [31-Mar-2017]

- various tweaks to plot, modified examples to use plot

Changes from Version 1.03 to 1.04 [31-Mar-2017]

- added plot, better handling of rank deficient bases, and `rebalancing'
  when the initial run resulted in zero weights for some models but
  the forcing matrix was rank deficient

Changes from Version 1.02 to 1.03 [30-Mar-2017]

- added auto basis selection for each candidate model

Changes from Version 1.01 to 1.02 [29-Mar-2017]

- enhancements

Changes from Version 1.0 to 1.01 [28-Mar-2017]

- inlining of basis functions, various enhancements

Version 1.0 [20-Mar-2017]

- initial release (beta until further notice)