@@ -1,4 +1,8 @@
-Changes from Version 1.12 to 1.13 [5-Apr-2017]
+Changes from Version 1.13 to 1.14 [6-Apr-2017]
+
+- added option to restrict the sum of ma.weights to one or not (previous used this restriction, now default it to not restrict)
+
+Changes from Version 1.12 to 1.13 [6-Apr-2017]
 
 - issue with inference resolved, added options compute.sigtest.deriv (derivative based inference) and compute.sigtest.anova (F-based inference)
 
